# CcOSTestProject

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CcOSImport.cmake  README.md  VERSION.cmake
CMakeConfig/: ProjectMacros.cmake
CMakeConfig/InputFiles/: ProjectVersion.rc.in
CcOSExampleProject/: CMainApp.h  CMakeLists.txt  CcOSExampleProjectVersion.rc
CcOSExampleProject/src/: CMainApp.cpp  main.cpp
Documents/Doxygen/: config.txt  config.txt.in
Tools/: Test-BuildAndInstall.ps1
